[package]
name = "conc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.27", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.27", features = ["macros", "rt", "time"] }
rand = "0.8"
